feat(swagger): added swagger tag to OrderController
